[package]
name = "illyria"
version = "0.1.0"
authors = ["Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
edition = "2018"
readme = "README.md"
description = "Implements a stop-and-wait ARQ using postcard + COBS as a serialisation mechanism."
license-file = "LICENCE.md"
repository = "https://github.com/thejpster/illyria"
categories = [
    "embedded",
    "no-std",
]
keywords = [
    "ARQ",
    "serde",
    "cobs",
    "framing",
]

[dependencies]

[dependencies.postcard]
version = "0.3"

[dependencies.heapless]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["derive"]

[dependencies.byteorder]
version = "1.3"
default-features = false

[dependencies.cobs]
package = "postcard-cobs"
version = "0.1.5-pre"
default-features = false